# dynamo-monotable

./: field.py  pyproject.toml  t.py
docker/docker/dynamodb/: shared-local-instance.db
dynamodb_monotable/: attributes.py  exceptions.py  indexes.py  models.py  query_engine.py  resolvers.py  table.py
dynamodb_monotable/core/: queries.py
dynamodb_monotable/src/: attributes.py  index.py  items.py  keys.py  table.py  table_properties.py
dynamodb_monotable/table/: models.py  table.py
dynamodb_monotable/table/attributes/: attributes.py  resolvers.py
test/: conftest.py  test_get_item.py  test_put_item.py  test_query_items.py  testing_models.py
