[tool.poetry]
name = "dynamodb-monotable"
version = "0.1.0"
description = ""
authors = ["Kieran Lavelle"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.78"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
moto = "^4.0.5"
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
